<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_routes_black_24dp"
        android:title="@string/title_routes" />
    <item
        android:id="@+id/navigation_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alarm" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/title_call" />
    <item
        android:id="@+id/navigation_guides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_guides" />

</menu>